--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-community/slider": "^4.5.2",
     "expo": "~51.0.18",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
@@ -25,10 +26,10 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toggle-element": "^2.0.1",
+    "react-native-userpic": "^2.0.3",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "rn-swipe-button": "^1.3.8",
-    "expo-blur": "~13.0.2"
+    "rn-swipe-button": "^1.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
